Realizando el primer paso de la página evento y eventoNuevo

--- a/RosarioDeCadiz/src/main/resources/templates/fragmentos/menu.html
+++ b/RosarioDeCadiz/src/main/resources/templates/fragmentos/menu.html
@@ -89,11 +89,13 @@ footer{
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="./usuarios/usuario2.html">Productos</a>
+                        <a class="nav-link" th:href="@{/productos}">Productos</a>
+                        <a class="nav-link" th:href="@{/productoNuevo}">+ Producto Nuevo</a>
                     </li>
 
                     <li class="nav-item">
-                        <a id="dorado" class="nav-link" href="./usuarios/usuario2.html">Galería</a>
+                        <a id="dorado" class="nav-link" th:href="@{/eventos}">Eventos</a>
+                        <a class = "nav-link" th:href="@{/eventosNuevos}">+ Evento Nuevo</a>
                     </li>
 
                     <li class="nav-item">
