Ya aparece la página principal

--- a/RosarioDeCadiz/src/main/resources/templates/Eventos.html
+++ b/RosarioDeCadiz/src/main/resources/templates/Eventos.html
@@ -1,28 +1,28 @@
 <!doctype html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
-<head>
+<head >
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="/webjars/bootstrap/css/bootstrap.min.css" integrity="sha384-
 Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <title>Rosario de Cádiz</title>
-</head>
+</head >
 <body>
 
 	<nav th:replace="~{fragmentos/menu::menu}"></nav>
 	
-	<table>
+	<table class="table table-striped">
 		
 		<thead>
 			
 			<tr>
 			
-				<th>Id</th>
-				<th>Fecha</th>
-				<th>Lugar</th>
-				<th>Asunto</th>
-				<th>Organizador</th>
+				<th scope="col">Id</th scope="col">
+				<th scope="col">Fecha</th scope="col">
+				<th scope="col">Lugar</th scope="col">
+				<th scope="col">Asunto</th scope="col">
+				<th scope="col">Organizador</th>
 			
 			</tr>
 			
