--- a/RosarioDeCadiz/src/main/resources/templates/fragmentos/footer.html
+++ b/RosarioDeCadiz/src/main/resources/templates/fragmentos/footer.html
@@ -10,7 +10,7 @@
 	
 <div class="contens my-5 w-100" id="footer">
 
-      <footer class="bg-secondary text-center text-lg-start text-white w-100" id="footer">
+      <footer class="bg-secondary text-center text-lg-start text-white w-100" id="footer" th:fragment="footer">
         <div class="container p-4">
 
           <div class="row my-5">
