--- a/RosarioDeCadiz/src/main/resources/templates/fragmentos/menu.html
+++ b/RosarioDeCadiz/src/main/resources/templates/fragmentos/menu.html
@@ -1,46 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
+<head th:replace="~{fragmentos/estilosMenu::estilosMenu}">
 <meta charset="UTF-8">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <title>Rosario de Cádiz</title>
-<style type="text/css">
-	body{
-    font-family:Arial, Helvetica, sans-serif;
-}
-#menu a{
-    font-size: 15pt;
-}
 
-#menu button{
-    font-size: 15pt;
-}
-.carousel-inner{
-    max-height: 35rem ;
-}
-.navbar{
-    width: 100%;
-}
-footer{
-    width: 100%;
-}
-
-
-
-@media (max-width:768px){
-    #intro, #informacion{
-        width: 90% !important;
-    }
-    .columna-1{
-        width: 100% !important;
-    }
-    #mitad{
-        width: 90% !important;
-    }
-    #imformacion p{
-        display: none;
-    }
-}
-</style>
 </head>
 
 <body>
@@ -53,7 +18,7 @@ footer{
 
     <!------------------------------------------------------------------------------------------------------------------------------->
     <!--MENÚ ADAPTABLE PARA  MÓVILES, TABLET Y ORDENADORES-->
-    <nav class="navbar navbar-light bg-light p-3 sticky-top" id="menu">
+    <nav class="navbar navbar-light bg-light p-3 sticky-top" id="menu" th:fragment="menu">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <span class="text-danger fs-5 fx-bold"><img src="" width="35" height="35" alt=""></span>
