--- a/RosarioDeCadiz/src/main/resources/templates/fragmentos/menu.html
+++ b/RosarioDeCadiz/src/main/resources/templates/fragmentos/menu.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-light bg-light p-3 sticky-top" id="menu" th:fragment="menu">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <span class="text-danger fs-5 fx-bold"><img src="" width="35" height="35" alt=""></span>
+                <span class="text-danger fs-5 fx-bold"><img src="AQI VA EL LOGO" width="35" height="35" alt=""></span>
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -34,7 +34,7 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
                     <li class="nav-item">
-                        <a class="nav-link active text-dark" aria-current="page" href="./principal.html"><strong>INICIO</strong></a>
+                        <a class="nav-link active text-dark" aria-current="page"><strong>INICIO</strong></a>
                     </li>
 
                     <li class="nav-item">
@@ -59,8 +59,8 @@
                     </li>
 
                     <li class="nav-item">
-                        <a id="dorado" class="nav-link" th:href="@{/eventos}">Eventos</a>
-                        <a class = "nav-link" th:href="@{/eventosNuevos}">+ Evento Nuevo</a>
+                        <a class="nav-link" th:href="@{/eventos}">Eventos</a>
+                        <a  class = "nav-link" th:href="@{/eventosNuevos}">+ Evento Nuevo</a>
                     </li>
 
                     <li class="nav-item">
