--- a/RosarioDeCadiz/src/main/resources/templates/productos.html
+++ b/RosarioDeCadiz/src/main/resources/templates/productos.html
@@ -3,9 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<!-- Bootstrap CSS -->
-<link rel="stylesheet" href="/webjars/bootstrap/css/bootstrap.min.css" integrity="sha384-
-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <title>Rosario de Cádiz</title>
 </head>
 <body>
@@ -21,8 +20,8 @@ Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="a
               <p class="card-text">
                   th:
               </p>
-              <a href="#" class="btn btn-primary">Editar</a>
-              <a href="#" class="btn btn-primary">Borrar</a>
+              <a  href="#" class="btn btn-primary" th:href="@{/editar/{id}(id=${productos.id})}">Editar</a>
+              <a href="#" class="btn btn-primary" th:href="@{/borrar/{id}(id=${productos.id})}">Borrar</a>
             </div>
           </div>
         </div>
@@ -34,8 +33,8 @@ Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="a
               <p class="card-text">
                   th:
                 </p>
-                <a href="#" class="btn btn-primary">Editar</a>
-                <a href="#" class="btn btn-primary">Borrar</a>
+                <a  href="#" class="btn btn-primary" th:href="@{/editar/{id}(id=${productos.id})}">Editar</a>
+             	<a href="#" class="btn btn-primary" th:href="@{/borrar/{id}(id=${productos.id})}">Borrar</a>
             </div>
           </div>
         </div>
@@ -47,8 +46,8 @@ Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="a
                 <p class="card-text">
                     th:
                   </p>
-                  <a href="#" class="btn btn-primary">Editar</a>
-                  <a href="#" class="btn btn-primary">Borrar</a>
+                  <a  href="#" class="btn btn-primary" th:href="@{/editar/{id}(id=${productos.id})}">Editar</a>
+             	  <a href="#" class="btn btn-primary" th:href="@{/borrar/{id}(id=${productos.id})}">Borrar</a>
               </div>
             </div>
           </div>
@@ -60,8 +59,8 @@ Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="a
                 <p class="card-text">
                     th:
                   </p>
-                  <a href="#" class="btn btn-primary">Editar</a>
-                  <a href="#" class="btn btn-primary">Borrar</a>
+                  <a  href="#" class="btn btn-primary" th:href="@{/editar/{id}(id=${productos.id})}">Editar</a>
+              	  <a href="#" class="btn btn-primary" th:href="@{/borrar/{id}(id=${productos.id})}">Borrar</a>
               </div>
             </div>
           </div>
