--- a/RosarioDeCadiz/src/main/resources/templates/fragmentos/menu.html
+++ b/RosarioDeCadiz/src/main/resources/templates/fragmentos/menu.html
@@ -42,7 +42,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="./usuarios/usuario1.html">Quienes Somos</a>
+                        <a class="nav-link">Quienes Somos</a>
                     </li>
 
                     <li class="nav-item">
