--- a/RosarioDeCadiz/src/main/resources/templates/fragmentos/menu.html
+++ b/RosarioDeCadiz/src/main/resources/templates/fragmentos/menu.html
@@ -38,7 +38,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="./formulario.html">Iniciar Sesion</a>
+                        <a class="nav-link">Iniciar Sesion</a>
                     </li>
 
                     <li class="nav-item">
@@ -46,25 +46,23 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="./usuarios/usuario2.html">Componentes</a>
+                        <a class="nav-link">Componentes</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="./usuarios/usuario2.html">Repertorio</a>
+                        <a class="nav-link">Repertorio</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/productos}">Productos</a>
-                        <a class="nav-link" th:href="@{/productoNuevo}">+ Producto Nuevo</a>
+                        <a class="nav-link" href="/productos">Productos</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/eventos}">Eventos</a>
-                        <a  class = "nav-link" th:href="@{/eventosNuevos}">+ Evento Nuevo</a>
+                        <a class="nav-link" href="/eventos">Eventos</a>                        
                     </li>
 
                     <li class="nav-item">
-                        <a id="dorado" class="nav-link" href="./usuarios/usuario2.html">Semana Santa</a>
+                        <a id="dorado" class="nav-link">Semana Santa</a>
                     </li>
                 </ul>
             </div>
