--- a/RosarioDeCadiz/src/main/resources/templates/Eventos.html
+++ b/RosarioDeCadiz/src/main/resources/templates/Eventos.html
@@ -11,17 +11,23 @@
 
 	<nav th:replace="~{fragmentos/menu::menu}"></nav>
 	
+	<div class="container">
+		<div class="jumbotron">
+			<h1 th:text="${mensaje}">Mensaje</h1>
+		</div>
+	</div>
+	
 	<table class="table table-striped">
 		
 		<thead>
 			
 			<tr>
 			
-				<th scope="col">Id</th scope="col">
-				<th scope="col">Fecha</th scope="col">
-				<th scope="col">Lugar</th scope="col">
-				<th scope="col">Asunto</th scope="col">
-				<th scope="col">Organizador</th>
+				<th>Id</th>
+				<th>Fecha</th>
+				<th>Lugar</th>
+				<th>Asunto</th>
+				<th>Organizador</th>
 			
 			</tr>
 			
