--- a/Banda/src/main/resources/templates/eventos.html
+++ b/Banda/src/main/resources/templates/eventos.html
@@ -1,65 +1,39 @@
 <!DOCTYPE html>
 <html lang="es">
-	<head>
-        <meta charset='utf-8'>
-        <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-        <title>Rosario de Cádiz</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+	<head th:replace="~{fragmentos/head::head}">
+       
 </head>
 <body>
+
 	<nav th:replace="~{fragmentos/encabezado::encabezado}"></nav>
+	<div id="menu">
+	<a th:href="@{/list}">Inicio</a> | <a th:href="@{/nuevo}">Evento Nuevo</a>
+</div>
 	
 	<table class="table table-striped">
 		
-		<thead>
-
-			<tr>
+	<thead>
+		<tr>
+			<th>Id</th>
+			<th>Nombre</th>
+			<th>Apellidos</th>
+			<th>email</th>
+			<th>Operaciones</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr th:each="eventos : ${lista}">
+			<td th:text="${eventos.id}">1</td>
+			<td th:text="${eventos.fecha}">Nombre</td>
+			<td th:text="${eventos.lugar}">Apellidos</td>
+			<td th:text="${eventos.asunto}">Email</td>
+			<td th:text="${eventos.organizador}">Email</td>
 			
-				<th>Id</th>
-				<th>Fecha</th>
-				<th>Lugar</th>
-				<th>Asunto</th>
-				<th>Organizador</th>
-			
-			</tr>
-		</thead>
-		<tbody>
-		
-			<tr th:each="eventos: ${lista}">
-			
-			
-				<td th:text="${eventos.id}">1</td>
-				<td th:text="${eventos.fecha}">Fecha</td>
-				<td th:text="${eventos.lugar}">Lugar</td>
-				<td th:text="${eventos.asunto}">Asunto</td>
-				<td th:text="${eventos.organizador}">Organizador</td>
 				<td>
-					<a href="#" th:href="@{/editar/{id}(id=${eventos.id})}">Editar</a> | 
-					<a href="#" th:href="@{/borrar/{id}(id=${eventos.id})}">Borrar</a>
-				</td>
-				
-				<td>
-				<a href="#" th:href="@{/editar/{id}(id=${alumno.id})}">Editar</a> | 
-				<a href="#" th:href="@{/borrar/{id}(id=${alumno.id})}">Borrar</a>
+				<a href="#" th:href="@{/editar/{id}(id=${eventos.id})}">Editar</a> | 
+				<a href="#" th:href="@{/borrar/{id}(id=${eventos.id})}">Borrar</a>
 			</td>
-		</tr>
 		
-		<tr>
-			<td>1</td>
-			<td>2022-05-17</td>
-			<td>Sanlúcar de Barrameda</td>
-			<td>75 aniverario Hermandad de Nuestro Padre Jesús en la Oración del Huerto y María Santísima de Gracia y Esperanza</td>
-			<td>Hermandad del ""Huerto""</td>
-		</tr>
-		
-		<tr>
-			<td>2</td>
-			<td>2022-05-25</td>
-			<td>Sanlúcar de Barrameda</td>
-			<td>75 aniverario Hermandad de Nuestro Padre Jesús en su entrada triunfal en Jerusalén y María Santísima de la Victoria</td>
-			<td>Hermandad de la "Burrita""</td>
-		</tr>
 
 		</tbody>
 		
