--- a/Banda/src/main/resources/templates/formularioEvento.html
+++ b/Banda/src/main/resources/templates/formularioEvento.html
@@ -11,7 +11,7 @@
 <body>
 <div id="formulario">
 	
-		<form th:action="${eventos.id != 0} ? @{/editar/proceso} : @{/productoNuevo/proceso}" th:object="${eventos}" method="post">
+		<form th:action="${eventos.id != 0} ? @{/editar/submit} : @{/nuevo/submit}" th:object="${eventos}" method="post">
 		
 			<input th:if="${eventos.id != 0}" type="hidden" name="id" th:field="*{id}" />
 			
@@ -24,6 +24,8 @@
 		
 			<input type="text" name="organizador" th:field="*{organizador}" placeholder="Organizador" />
 			
+		
+			<input type="submit" name="enviar" value="Enviar" />
 		</form>
 		
 	</div>
