Empezando arreglar el footer, crud de productos realizado. Empezar con la búsqueda

--- a/Banda/src/main/resources/templates/eventos.html
+++ b/Banda/src/main/resources/templates/eventos.html
@@ -7,7 +7,7 @@
 
 	<nav th:replace="~{fragmentos/encabezado::encabezado}"></nav>
 	<div id="menu">
-	<a th:href="@{/list}">Inicio</a> | <a th:href="@{/nuevo}">Evento Nuevo</a>
+		 <a th:href="@{/nuevo}">Evento Nuevo</a>
 </div>
 	
 	<table class="table table-striped">
