--- a/Banda/src/main/resources/templates/index.html
+++ b/Banda/src/main/resources/templates/index.html
@@ -21,13 +21,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/contenido/img/carrusel1.jpg" class="d-block w-100" alt="...">
+            <img th:src= "@{media/carrusel1.jpg}" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/contenido/img/carrusel2.jpg" class="d-block w-100" alt="...">
+            <img th:src= "@{media/carrusel2.jpg}" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/contenido/img/carrusel3.jpg" class="d-block w-100" alt="...">
+            <img th:src= "@{media/carrusel3.jpg}" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -44,28 +44,28 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img th:src= "@{media/director.jpg}" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Diego Jimenez</h5>
+              <h5 class="card-title">Jose Antonio Cruz</h5>
               <p class="card-text">Director Musical de Rosario de Cádiz. Teléfono: 603567854</p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img th:src= "@{media/pascual.jpg}"  class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Manuel López</h5>
+              <h5 class="card-title">Fray Pascual</h5>
               <p class="card-text">Hermano mayor de la hermandad Nuestras Señora del Rosario Coronada, Patrona y Alcaldesa Perpetua de la ciudad de Cádiz</p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img th:src= "@{media/sergio.jpg}" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Leandro Barba</h5>
-              <p class="card-text">Director de la banda de Rosario de Cádiz. Teléfono: 985754865</p>
+              <h5 class="card-title">Sergio Larringa †</h5>
+              <p class="card-text">Exdirector de la banda de Rosario de Cádiz. Teléfono: 985754865</p>
             </div>
           </div>
         </div>
