--- a/Banda/src/main/resources/templates/fragmentos/encabezado.html
+++ b/Banda/src/main/resources/templates/fragmentos/encabezado.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragmentos/head::head}">
-<meta charset="UTF-8">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-<title>Rosario de Cádiz</title>
-
-</head>
-
+   <meta charset='utf-8'>
+        <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+        <title>Rosario de Cádiz</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <link rel='stylesheet' type='text/css' media='screen' href='prinipal.css'>
+        
+  </head>
 
 <body>
-
-	<!-- Fixed navbar -->
-	
-	
-	<!-- Aquí es donde definimos que este encabezado es un fragmento que podremos usar en otras plantillas html
-	cuando usemos el nombre de "encabezado", el usado en th:"encabezado" de la siguiente línea -->
 	
 	<nav class="navbar navbar-default navbar-fixed-top" th:fragment="encabezado">
 		<div class="container">
@@ -34,14 +29,14 @@
 					<li class="nav-item"><a class="nav-link" href="/">Inicio</a></li>
 					<li class="nav-item"><a class="nav-link" href="/list">Eventos</a></li>
 					<li class="nav-item"><a class="nav-link" href="/nuevo">+ Eventos</a></li>
-					<li class="nav-item"><a class="nav-link" href="/productos">Productos</a></liclass="nav-item">
+					<li class="nav-item"><a class="nav-link" href="/lista">Productos</a></li>
+					<li class="nav-item"><a class="nav-link" href="/nuevo">+ Productos</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">Repertorio</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">Galería</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">Semana Santa</a></li>
 				</ul>
 			</div>
-			<!--/.nav-collapse -->
 		</div>
 	</nav>
 
