--- a/Banda/src/main/resources/templates/productos.html
+++ b/Banda/src/main/resources/templates/productos.html
@@ -1,21 +1,43 @@
 <!DOCTYPE html>
 <html lang="es">
 	<head th:replace="~{fragmentos/head::head}">
-        <meta charset='utf-8'>
-        <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-        <title>Rosario de Cádiz</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+       
 </head>
 <body>
+
 	<nav th:replace="~{fragmentos/encabezado::encabezado}"></nav>
+	<div id="menu">
+		 <a th:href="@{/nuevoProducto}">Producto Nuevo</a>
+</div>
 	
-	<!-- Begin page content -->
-	<div class="container">
-		<div class="jumbotron">
-			<h1 th:text="${mensaje}">Mensaje</h1>
-		</div>
-	</div>
+	<table class="table table-striped">
+		
+	<thead>
+		<tr>
+			<th>Id</th>
+			<th>Nombre</th>
+			<th>Cantidad</th>
+			<th>Precio</th>
+			<th>Disponibilidad</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr th:each="productos : ${lista}">
+			<td th:text="${productos.id}">Id</td>
+			<td th:text="${productos.nombre}">Nombre</td>
+			<td th:text="${productos.cantidad}">Cantidad</td>
+			<td th:text="${productos.precio}">Precio</td>
+			<td th:text="${productos.disponibilidad}">Disponibilidad</td>
+			
+				<td>
+				<a href="#" th:href="@{/editarProducto/{id}(id=${productos.id})}">Editar</a> | 
+				<a href="#" th:href="@{/borrarProducto/{id}(id=${productos.id})}">Borrar</a>
+			</td>
+		
+
+		</tbody>
+		
+	</table>
 	
 	<footer th:replace="~{fragmentos/pie::pie}"></footer>
 	
