--- a/Banda/src/main/resources/templates/fragmentos/encabezado.html
+++ b/Banda/src/main/resources/templates/fragmentos/encabezado.html
@@ -12,20 +12,15 @@
 
 <body>
 	
-	<nav class="navbar navbar-default navbar-fixed-top" th:fragment="encabezado">
-		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed"
-					data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-					aria-controls="navbar">
-					<span class="sr-only">Rosario de Cádiz</span> <span
-						class="icon-bar"></span> <span class="icon-bar"></span> <span
-						class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="/">Rosario De Cádiz</a>
-			</div>
-			<div id="navbar" class="collapse navbar-collapse">
-				<ul class="nav navbar-nav">
+	<nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="encabezado">
+  		<div class="container-fluid">
+   			 <span class="text-danger fs-5 fx-bold"><img th:src= "@{media/logo.png}" class="d-block w-100" alt="logo" width="100" height="100"></span>
+    		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      			<span class="navbar-toggler-icon"></span>
+    		</button>
+    		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      			<div class="navbar-nav">
+        			<ul class="nav navbar-nav">
 					<li class="nav-item"><a class="nav-link" href="/">Inicio</a></li>
 					<li class="nav-item"><a class="nav-link" href="/list">Eventos</a></li>
 					<li class="nav-item"><a class="nav-link" href="/nuevo">+ Eventos</a></li>
@@ -36,9 +31,10 @@
 					<li class="nav-item"><a class="nav-link" href="#">Galería</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">Semana Santa</a></li>
 				</ul>
-			</div>
-		</div>
-	</nav>
+      			</div>
+    		</div>
+  		</div>
+		</nav>
 
 </body>
 
