--- a/Banda/src/main/resources/templates/fragmentos/encabezado.html
+++ b/Banda/src/main/resources/templates/fragmentos/encabezado.html
@@ -27,7 +27,7 @@
 					<li class="nav-item"><a class="nav-link" href="/lista">Productos</a></li>
 					<li class="nav-item"><a class="nav-link" href="/nuevo">+ Productos</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">Repertorio</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+					<li class="nav-item"><a class="nav-link" href="/carrito">Carrito</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">Galería</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">Semana Santa</a></li>
 				</ul>
