Se arregló bootstrap

--- a/Banda/src/main/resources/templates/eventos.html
+++ b/Banda/src/main/resources/templates/eventos.html
@@ -3,6 +3,26 @@
 	<head th:replace="~{fragmentos/head::head}">
        
 </head>
+<style>
+	table{
+            width: 85%;
+            margin: 0 auto;
+            border: 2px lightblue solid;
+            border-collapse: collapse;
+            padding: 5px;
+            background-color: rgb(243, 251, 253);
+        }
+        td{
+            border: 2px lightblue solid;
+            padding: 5px;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        th{
+            background-color: lightblue;
+            font-family: Arial, Helvetica, sans-serif;
+            font-style: oblique;
+        }
+</style>
 <body>
 
 	<nav th:replace="~{fragmentos/encabezado::encabezado}"></nav>
