--- a/Banda/src/main/resources/templates/formularioEvento.html
+++ b/Banda/src/main/resources/templates/formularioEvento.html
@@ -8,22 +8,64 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
-<body>
-<div id="formulario">
+<style>
+	*{
+		margin:0;
+		padding:0;
+		-webkit-font-smoothing:antialiased;
+		-moz-font-smoothing:antialiased;
+		-o-font-smoothing:antialiased;
+		text-rendering:optimizeLegibility;
+	}
 	
-		<form th:action="${eventos.id != 0} ? @{/editar/submit} : @{/nuevo/submit}" th:object="${eventos}" method="post">
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(212, 239, 255);
+    background: linear-gradient(to right, rgb(77, 77, 77), rgb(37, 37, 37) );
+}
+		
+form{
+    font-family: Arial, Helvetica, sans-serif;
+}
+		#productos{
+			background:#F9F9F9;
+			padding:25px;
+			margin:50px 0;
+			border-radius:25px;
+			text-align:center;
+		}
+	
+</style>
+
+<body>
+	<nav th:replace="~{fragmentos/encabezado::encabezado}"></nav>
+
+	<div class="container" id="formulario">
+	
+		<form id="productos" th:action="${eventos.id != 0} ? @{/editar/submit} : @{/nuevo/submit}" th:object="${eventos}" method="post">
 		
 			<input th:if="${eventos.id != 0}" type="hidden" name="id" th:field="*{id}" />
 			
-			<input type="date" name="fecha" th:field="*{fecha}" placeholder="fecha" value="2022-05-20"
-      			 min="2022-01-01" max="2025-12-31" /> 
+			<div class="mb-3">
+				<label class="form-label">Fecha</label>	
+				<input type="date" name="fecha" th:field="*{fecha}" placeholder="fecha" value="2022-05-20"
+      				 min="2022-01-01" max="2025-12-31" />
+			</div>
+					  
+     		<div class="mb-3">
+				<label class="form-label">Lugar</label>	
+				<input type="text" name="lugar" th:field="*{lugar}" placeholder="Lugar" />
+     		</div>
+     			 
+			<div class="mb-3">
+				<label class="form-label">Asunto</label>	
+				<input type= "text" name="asunto" th:field="*{asunto}" placeholder="Asunto" />
+			</div>
 				
-			<input type="text" name="lugar" th:field="*{lugar}" placeholder="Lugar" /> 
-			
-			<input type= "text" name="asunto" th:field="*{asunto}" placeholder="Asunto" />
-		
-			<input type="text" name="organizador" th:field="*{organizador}" placeholder="Organizador" />
-			
+			<div class="mb-3">
+				<label class="form-label">Organizador</label>	
+				<input type="text" name="organizador" th:field="*{organizador}" placeholder="Organizador" />
+			</div>
 		
 			<input type="submit" name="enviar" value="Enviar" />
 		</form>
