--- a/Banda/src/main/resources/templates/formularioProductos.html
+++ b/Banda/src/main/resources/templates/formularioProductos.html
@@ -6,23 +6,67 @@
         <title>Rosario de Cádiz</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    
 </head>
+<style>
+	*{
+		margin:0;
+		padding:0;
+		-webkit-font-smoothing:antialiased;
+		-moz-font-smoothing:antialiased;
+		-o-font-smoothing:antialiased;
+		text-rendering:optimizeLegibility;
+	}
+	
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(212, 239, 255);
+    background: linear-gradient(to right, rgb(77, 77, 77), rgb(37, 37, 37) );
+}
+		
+form{
+    font-family: Arial, Helvetica, sans-serif;
+}
+		#productos{
+			background:#F9F9F9;
+			padding:25px;
+			margin:50px 0;
+			border-radius:25px;
+			text-align:center;
+		}
+	
+</style>
 
 <body>
-<div id="formulario">
+
+	<nav th:replace="~{fragmentos/encabezado::encabezado}"></nav>
+
+	<div class="container" id="formulario">
 	
-		<form th:action="${productos.id != 0} ? @{/editarProducto/submit} : @{/productoNuevo/submit}" th:object="${productos}" method="post">
-		
+		<form id="productos" class="mb-3" th:action="${productos.id != 0} ? @{/editarProducto/submit} : @{/productoNuevo/submit}" th:object="${productos}" method="post">
+			
 			<input th:if="${productos.id != 0}" type="hidden" name="id" th:field="*{id}" /> 
-				
-			<input type="text" name="nombre" th:field="*{nombre}" placeholder="Nombre" /> 
 			
-			<input type= "number" name="cantidad" min="1" max="100" th:field="*{cantidad}" placeholder="Cantidad" />
-		
-			<input type="text" name="precio" th:field="*{precio}" placeholder="Precio" />
+			<div class="mb-3">
+				<label class="form-label">Nombre Producto</label>	
+				<input type="text" name="nombre" th:field="*{nombre}" placeholder="Nombre" /> 
+			</div>
 			
-			<input type="text" name="disponibilidad" th:field="*{disponibilidad}" placeholder="Disponibilidad" />
-		
+			<div class="mb-3">
+				<label class="form-label">Cantidad</label>
+				<input type= "number" name="cantidad" min="1" max="100" th:field="*{cantidad}" placeholder="Cantidad" />
+			</div>
+			
+			<div class="mb-3">
+				<label class="form-label">Precio</label>
+				<input type="text" name="precio" th:field="*{precio}" placeholder="Precio" />
+			</div>
+			
+			<div class="mb-3">
+				<label class="form-label">Disponibilidad</label>
+				<input type="text" name="disponibilidad" th:field="*{disponibilidad}" placeholder="Disponibilidad" />
+			</div>
+			
 			<input type="submit" name="enviar" value="Enviar" />
 		</form>
 		
