--- a/Banda/src/main/resources/templates/productos.html
+++ b/Banda/src/main/resources/templates/productos.html
@@ -3,6 +3,26 @@
 	<head th:replace="~{fragmentos/head::head}">
        
 </head>
+<style>
+	table{
+            width: 85%;
+            margin: 0 auto;
+            border: 2px lightblue solid;
+            border-collapse: collapse;
+            padding: 5px;
+            background-color: rgb(243, 251, 253);
+        }
+        td{
+            border: 2px lightblue solid;
+            padding: 5px;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        th{
+            background-color: lightblue;
+            font-family: Arial, Helvetica, sans-serif;
+            font-style: oblique;
+        }
+</style>
 <body>
 
 	<nav th:replace="~{fragmentos/encabezado::encabezado}"></nav>
@@ -10,8 +30,8 @@
 		 <a th:href="@{/nuevoProducto}">Producto Nuevo</a>
 </div>
 
-<form method="get" th:action = "@{/buscar}">
-	<input type ="text" placeholder = "Nombre del Producto"
+<form id="buscar" class="d-flex" method="get" th:action = "@{/buscar}">
+	<input class="dropdown-item" type ="text" placeholder = "Nombre del Producto"
 		name = "nombre" id= "nombre" th:value="${param.nombre}">
 	<input type="submit" value="Enviar">
 </form>
