--- a/Banda/src/main/resources/templates/fragmentos/encabezado.html
+++ b/Banda/src/main/resources/templates/fragmentos/encabezado.html
@@ -30,6 +30,7 @@
 					<li class="nav-item"><a class="nav-link" href="/carrito">Carrito</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">Galería</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">Semana Santa</a></li>
+					<li class="nav-item"><a class="nav-link" href="/admin">Administrador</a></li>
 				</ul>
       			</div>
     		</div>
