Dejando Seguiriad para la clase a ver si funciona ahí y arreglasrlo

--- a/Banda/src/main/resources/templates/fragmentos/encabezado.html
+++ b/Banda/src/main/resources/templates/fragmentos/encabezado.html
@@ -26,8 +26,8 @@
 					<li class="nav-item"><a class="nav-link" href="/lista">Productos</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">Repertorio</a></li>
 					<li class="nav-item"><a class="nav-link" href="/carrito">Carrito</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Galería</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Semana Santa</a></li>
+					<li class="nav-item"><a class="nav-link" th:href="@{/logout}">Salir</a></li>
+					<li class="nav-item"><a class="nav-link" href="/admin">Administrador</a></li>
 				</ul>
       			</div>
     		</div>
