--- a/Banda/src/main/resources/templates/productos.html
+++ b/Banda/src/main/resources/templates/productos.html
@@ -27,7 +27,7 @@
 
 	<nav th:replace="~{fragmentos/encabezado::encabezado}"></nav>
 	<div id="menu">
-		 <a th:href="@{/nuevoProducto}">Producto Nuevo</a>
+		 <a th:href="@{/admin/nuevoProducto}">Producto Nuevo</a>
 </div>
 
 <form id="buscar" class="d-flex" method="get" th:action = "@{/buscar}">
