--- a/Banda/src/main/resources/templates/formularioEvento.html
+++ b/Banda/src/main/resources/templates/formularioEvento.html
@@ -38,7 +38,7 @@ form{
 </style>
 
 <body>
-	<nav th:replace="~{fragmentos/encabezado::encabezado}"></nav>
+	<nav th:replace="~{fragmentos/menu::menu}"></nav>
 
 	<div class="container" id="formulario">
 	
