--- a/Banda/src/main/resources/templates/index.html
+++ b/Banda/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
         
   </head>
 <body>
-	<nav th:replace="~{fragmentos/encabezado::encabezado}"></nav>
+	<nav th:replace="~{fragmentos/menu::menu}"></nav>
 	
 	 <!--CARRUSEL-->
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -137,7 +137,7 @@
             </div>
         </section>
 	
-	<footer th:replace="~{fragmentos/pie::pie}"></footer>
+	<footer th:replace="~{fragmentos/footer::footer}"></footer>
 	
 	<th:block th:replace=~{fragmentos/jsfinal::javascriptfinal}></th:block>
 </body>
