--- a/Banda/src/main/resources/templates/admin/indexAdmin.html
+++ b/Banda/src/main/resources/templates/admin/indexAdmin.html
@@ -14,32 +14,7 @@
   	
   	<body>
   	
-    <h1>Bienvenido a la zona privada de administración</h1>
-    <p th:text="${usuario.nombre + ' ' + usuario.apellidos}">Nombre de usuario</p>
-    <img style="width: 96px" th:src="${usuario.avatar}" />
-    <a th:href="@{/}">Zona pública</a> |  <a th:href="@{/logout}">Salir</a>
-    
-    	<nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="encabezado">
-  		<div class="container-fluid">
-   			 <span class="text-danger fs-5 fx-bold"><img th:src= "@{media/logo.png}" class="d-block w-100" alt="logo" width="100" height="100"></span>
-    		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      			<span class="navbar-toggler-icon"></span>
-    		</button>
-    		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      			<div class="navbar-nav">
-        			<ul class="nav navbar-nav">
-					<li class="nav-item"><a class="nav-link" href="/">Inicio</a></li>
-					<li class="nav-item"><a class="nav-link" href="/list">Eventos</a></li>
-					<li class="nav-item"><a class="nav-link" href="admin/lista">Productos</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Repertorio</a></li>
-					<li class="nav-item"><a class="nav-link" href="/carrito">Carrito</a></li>
-					<li class="nav-item"><a class="nav-link" th:href="@{/logout}">Salir</a></li>
-					<li class="nav-item"><a class="nav-link" href="/">Cliente</a></li>
-				</ul>
-      			</div>
-    		</div>
-  		</div>
-		</nav>
+	<nav th:replace="~{fragmentos/menu::menu}"></nav>
     
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
