--- a/Banda/src/main/resources/templates/fragmentos/footer.html
+++ b/Banda/src/main/resources/templates/fragmentos/footer.html
@@ -13,7 +13,7 @@
 <body>
 
 <div class="container my-5">
-  <footer class="text-center text-white" style="background-color: rgb(70, 70, 70)"th:fragment="pie" >
+  <footer class="text-center text-white" style="background-color: rgb(70, 70, 70)"th:fragment="footer" >
     <div class="container">
       <section class="mt-5">
         <div class="row text-center d-flex justify-content-center pt-5">
