Intentando hacer categoría por décima vez

--- a/Banda/src/main/resources/templates/fragmentos/menu.html
+++ b/Banda/src/main/resources/templates/fragmentos/menu.html
@@ -30,8 +30,8 @@
            				 Categorias
           				</a>
           	            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<li><a class="dropdown-item" href="#">Ropa</a></li>
-            				<li><a class="dropdown-item" href="#">Accesorios</a></li>
+							<li><a class="dropdown-item" href="/ropa">Ropa</a></li>
+            				<li><a class="dropdown-item" href="/accesorios">Accesorios</a></li>
           				</ul>
         			</li>
 				</ul>
