--- a/Banda/src/main/resources/templates/formularioProductos.html
+++ b/Banda/src/main/resources/templates/formularioProductos.html
@@ -43,7 +43,7 @@ form{
 
 	<div class="container" id="formulario">
 	
-		<form id="productos" class="mb-3" th:action="${productos.id != 0} ? @{/editarProducto/submit} : @{/productoNuevo/submit}" th:object="${productos}" method="post">
+		<form id="productos" class="mb-3" th:action="${productos.id != 0} ? @{/editarProducto/submit} : @{/productoNuevo/submit}" th:object="${productos}" method="post" enctype="multipart/form-data">
 			
 			<input th:if="${productos.id != 0}" type="hidden" name="id" th:field="*{id}" /> 
 			
