--- a/Banda/src/main/resources/templates/fragmentos/menu.html
+++ b/Banda/src/main/resources/templates/fragmentos/menu.html
@@ -24,7 +24,7 @@
 					<li class="nav-item"><a class="nav-link" href="/">Inicio</a></li>
 					<li class="nav-item"><a class="nav-link" href="/list">Eventos</a></li>
 					<li class="nav-item"><a class="nav-link" href="/lista">Productos</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Repertorio</a></li>
+					<li class="nav-item"><a class="nav-link" href="/contacto">Contacto</a></li>
         			<li class="nav-item dropdown">
         				<a class="nav-link dropdown-toggle" href="/categoria" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
            				 Categorias
