Agregando opción seleccionable para la gestión de eventos, categorias y productos

--- a/Banda1/Banda1/src/main/resources/templates/fragmentos/menu.html
+++ b/Banda1/Banda1/src/main/resources/templates/fragmentos/menu.html
@@ -21,10 +21,18 @@
     		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       			<div class="navbar-nav">
         			<ul class="nav navbar-nav">
-					<li class="nav-item"><a class="nav-link" href="/">Inicio</a></li>
-					<li class="nav-item"><a class="nav-link" href="/list">Eventos</a></li>
-					<li class="nav-item"><a class="nav-link" href="/lista">Productos</a></li>
-				</ul>
+						<li class="nav-item"><a class="nav-link" href="/">Inicio</a></li>
+						<li class="nav-item"><a class="nav-link" href="/list">Eventos</a></li>
+						<li class="nav-item"><a class="nav-link" href="/lista">Productos</a></li>
+						<li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" 
+							id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Gestión</a>
+         				 		<ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+            						<li><a class="dropdown-item" href="/list">Eventos</a></li>
+            						<li><a class="dropdown-item" href="/lista">Productos</a></li>
+            						<li><a class="dropdown-item" href="#">Categorias</a></li>
+          						</ul>
+        				</li>
+					</ul>
       			</div>
     		</div>
   		</div>
