--- a/Banda1/Banda1/src/main/resources/templates/eventosAdmin.html
+++ b/Banda1/Banda1/src/main/resources/templates/eventosAdmin.html
@@ -31,7 +31,7 @@
 
 	<nav th:replace="~{fragmentos/menu::menu}"></nav>
 	<div id="menu">
-		<a class="btn btn-primary" th:href="@{/nuevo/evento}">Evento Nuevo</a>
+		<a class="btn btn-primary" th:href="@{/nuevo}">Evento Nuevo</a>
 	</div>
 
 	<table class="table table-striped">
