Arreglado el get de la gestion eventos, aún falta gestión categoria y arreglo de las imagee

--- a/Banda1/Banda1/src/main/resources/templates/productosAdmin.html
+++ b/Banda1/Banda1/src/main/resources/templates/productosAdmin.html
@@ -35,7 +35,7 @@
 					<tbody>
 
 						<tr th:each="productos: ${lista}">
-							<td><img class="img-responsive h-30" th:src="${productos.img}" alt="imagen_producto">Imagen</td>									
+							<td><img class="img-responsive w-48" th:src="${productos.img}" alt="imagen_producto">Imagen</td>									
 							<td th:text="${productos.nombre}">Nombre</td>
 							<td th:text="${productos.cantidad}">Cantidad</td>
 							<td th:text="${#numbers.formatCurrency(productos.precio)}">Precio</td>
