--- a/Banda1/Banda1/src/main/resources/templates/fragmentos/menu.html
+++ b/Banda1/Banda1/src/main/resources/templates/fragmentos/menu.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="~{fragmentos/head::head}">
+<head>
 	<meta charset='utf-8'>
 	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
 	<title>Rosario de Cádiz</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 	<link rel='stylesheet' type='text/css' media='screen' href='prinipal.css'>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
 
 </head>
 
@@ -15,8 +16,8 @@
 
 	<nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="menu">
 		<div class="container-fluid">
-			<span class="text-danger fs-5 fx-bold"><a href="/"><img th:src="@{media/logo.png}" class="d-block w-100"
-						alt="logo" width="100" height="100"></a></span>
+			<span class="text-danger fs-5 fx-bold"><a href="/inicio"><img th:src="@{media/logo.png}"
+						class="d-block w-100" alt="logo" width="100" height="100"></a></span>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
 				aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -24,10 +25,10 @@
 			<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 				<div class="navbar-nav">
 					<ul class="nav navbar-nav">
-						<li class="nav-item"><a class="nav-link" href="/">Inicio</a></li>
+						<li class="nav-item"><a class="nav-link" href="/inicio">Inicio</a></li>
 						<li class="nav-item"><a class="nav-link" href="/list">Eventos</a></li>
 						<li class="nav-item"><a class="nav-link" href="/lista">Productos</a></li>
-						<li class="nav-item"><a class="nav-link" sec:authorize="hasRole('ROLE_USER')" href="#">Carrito</a></li>
+						<li class="nav-item"><a class="nav-link" href="#">Carrito</a></li>
 						<li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
 								sec:authorize="hasRole('ROLE_ADMIN')" href="#" id="navbarDarkDropdownMenuLink"
 								role="button" data-bs-toggle="dropdown" aria-expanded="false">Gestión</a>
@@ -35,8 +36,15 @@
 								<li><a class="dropdown-item" th:href="@{/lista/eventos}">Eventos</a></li>
 								<li><a class="dropdown-item" th:href="@{/lista/producto}">Productos</a></li>
 								<li><a class="dropdown-item" href="#">Categorias</a></li>
+
+							
 							</ul>
 						</li>
+
+							<li> <a class="btn btn-light" sec:authorize="!isAuthenticated()" th:href="@{/login}"> <i class="bi bi-door-closed"></i> </a></li>
+								<li> <a class="btn btn-light" sec:authorize="isAuthenticated()" th:href="@{/logout}"><i
+											class="bi bi-door-open"> </i></a></li>
+
 
 					</ul>
 				</div>
