--- a/Banda1/Banda1/src/main/resources/templates/productosAdmin.html
+++ b/Banda1/Banda1/src/main/resources/templates/productosAdmin.html
@@ -7,13 +7,17 @@
 	<title>Rosario de Cádiz</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-	<link rel='stylesheet' type='text/css' media='screen' href='prinipal.css'>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
 
 </head>
 
 <style>
 	img{
 		width: 60px;
+	}
+	
+	table{
+		margin: 0 auto;
 	}
 </style>
 
@@ -26,10 +30,10 @@
 		<div class="row">
 			<div class="col-md-offset-1 col-md-10">
 				<div class="pull-right">
-					<a class="btn btn-primary" th:href="@{/nuevoProducto}">Producto Nuevo</a>
+					<a class="btn btn-primary" th:href="@{/nuevoProducto}"><i class="bi bi-cloud-plus"></i></a>
 				</div>
 
-				<table class="table">
+				<table class="table table-striped">
 					<thead>
 						<tr>
 							<th>Imagen</th>
@@ -45,8 +49,8 @@
 							<td th:text="${productos.nombre}">Nombre</td>
 							<td th:text="${productos.cantidad}">Cantidad</td>
 							<td th:text="${#numbers.formatCurrency(productos.precio)}">Precio</td>
-							<td><a href="#" class="btn btn-primary" th:href="@{/editarProducto/{id}(id=${productos.id})}">Editar</a></td>									
-							<td><a href="#" class="btn btn-primary" th:href="@{/borrarProducto/{id}(id=${productos.id})}">Borrar</a></td>
+							<td><a href="#" class="btn btn-primary" th:href="@{/editarProducto/{id}(id=${productos.id})}"><i class="bi bi-pencil-square"></i></a></td>									
+							<td><a href="#" class="btn btn-danger" th:href="@{/borrarProducto/{id}(id=${productos.id})}"><i class="bi bi-trash3"></i></a></td>
 						</tr>
 
 					</tbody>
