--- a/Banda1/Banda1/src/main/resources/templates/categoria.html
+++ b/Banda1/Banda1/src/main/resources/templates/categoria.html
@@ -14,6 +14,33 @@
   
   		<nav th:replace="~{fragmentos/menu::menu}"></nav>
 
-  
+  <div class="container">
+  	<div class="row">
+  		<div class="col-md-offset-2 col-md-8">
+  			<div class="pull-right">
+  				<a href="formularioCategoria.html" class="btn btn-primary"></i></a>
+  				
+  			</div>
+  			
+  			<tale class="table">
+  				<thead>
+  					<tr>
+  						<th>Id</th>
+  						<th>Nombre</th>
+  						<th>Descripción</th>
+  					</tr>
+  				</thead>
+  				
+  				<tbody>
+  					<tr th:each="categoria : ${lista}">
+  						<td th:text="${categoria.id}"></td>
+  						<td th:text="${categoria.nombre}"></td>
+  						<td th:text="${categoria.descripcion}"></td>
+  						<td>
+  							<a href="#" class="btn btn-primary" th:href="@{/editarCategoria/{id}(id=${categoria.id})}"><i class="bi bi-pencil-square"></i></a>
+  						</td>									
+						<td>
+							<a href="#" class="btn btn-danger" th:href="@{/borrarCategoria/{id}(id=${categoria.id})}"><i class="bi bi-trash3"></i></a>
+						</td>
   
   </body>
