--- a/Banda1/Banda1/src/main/resources/templates/fragmentos/menu.html
+++ b/Banda1/Banda1/src/main/resources/templates/fragmentos/menu.html
@@ -36,7 +36,7 @@
 							<ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
 								<li><a class="dropdown-item" th:href="@{/lista/eventos}">Eventos</a></li>
 								<li><a class="dropdown-item" th:href="@{/lista/producto}">Productos</a></li>
-								<li><a class="dropdown-item" href="#">Categorias</a></li>
+								<li><a class="dropdown-item" href="/categoria">Categorias</a></li>
 
 							
 							</ul>
