Intentando carrito, no poder eliminar una categoria con productos adentro y filtrar categorias

--- a/Banda1/Banda1/src/main/resources/templates/fragmentos/menu.html
+++ b/Banda1/Banda1/src/main/resources/templates/fragmentos/menu.html
@@ -29,7 +29,18 @@
 						<li class="nav-item"><a class="nav-link" href="/inicio">Inicio</a></li>
 						<li class="nav-item"><a class="nav-link" href="/list">Eventos</a></li>
 						<li class="nav-item"><a class="nav-link" href="/lista">Productos</a></li>
-						<li class="nav-item"><a class="nav-link" href="#">Carrito</a></li>
+						<li class="nav-item"><a class="nav-link" href="/carrito">Carrito</a></li>
+						<li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
+							 href="#" id="navbarDarkDropdownMenuLink"
+							role="button" data-bs-toggle="dropdown" aria-expanded="false">Categorias</a>					
+							<ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarDarkDropdownMenuLink">
+								<th:block th:each="categoria : ${lista}">
+									<a class="dropdown-item text-light"
+										th:href="@{/categoria/{id}(id=${categoria.id})}"
+										th:text="${categoria.nombre}"></a>
+								</th:block>
+							</ul>
+						</li>
 						<li class="nav-item dropdown"><a class="nav-link dropdown-toggle"
 								sec:authorize="hasRole('ROLE_ADMIN')" href="#" id="navbarDarkDropdownMenuLink"
 								role="button" data-bs-toggle="dropdown" aria-expanded="false">Gestión</a>
